--- a/mystyle.css
+++ b/mystyle.css
@@ -1,8 +1,7 @@
-$color: #f7a5a1;
-#img1 {
+#img {
   float:inline;
-  width: 300px;
-  height: 300px;
+  width: 600px;
+  height: 500px;
   border-style:dotted;
   margin-left:500px;
   margin-right:500px;
@@ -11,10 +10,11 @@ $color: #f7a5a1;
   text-align:center;
 }
 body {
-  background-color: $color;
+  background-color: #f7a5a1;
 }
 h1 {
   font-weight:
   color;
   font-size:100px;
 }
+
