--- a/mystyle.css
+++ b/mystyle.css
@@ -1,20 +1,56 @@
-#img {
+#description {
   float:inline;
-  width: 600px;
-  height: 500px;
-  border-style:dotted;
-  margin-left:500px;
-  margin-right:500px;
-}
-#poem{
+  font-size: 30px;
   text-align:center;
 }
+
+#img {
+  float:inline;
+  width: 300px;
+  height: 300px;
+  border-style:solid;
+  margin-left:600px;
+  margin-right:auto;
+}
+#caption {
+  float:inline;
+  text-align:center;
+  font-size:20px;
+}
+ul.nav-bar{
+  margin:30px;
+  padding:20px;
+  overflow:hidden;
+  background-color: #ff99ff;
+  border-style:groove;
+  border-color:black;
+
+}
+li.nav-bar{
+  margin-right: 100px;
+  display: inline;
+  color: #ffffff;
+  font-size: 40px;
+  text-align: center;
+}
+p.biography{
+  text-align: left;
+  font-size:14px;
+}
+div.biography{
+  float:inline;
+  margin-right:500px;
+  margin-left:500px;
+
+  padding:10px;
+  background-color: #ff99ff;
+  border:solid;
+}
 body {
-  background-color: #f7a5a1;
+  background-color: #ff9999;
 }
 h1 {
-  font-weight:
-  color;
+  font-family: Times New Roman, Times,sans-serif;
   font-size:100px;
+  text-align:center;
 }
-
