--- a/mystyle.css
+++ b/mystyle.css
@@ -4,18 +4,22 @@
   text-align:center;
 }
 
-#img {
-  float:inline;
-  width: 300px;
-  height: 300px;
-  border-style:solid;
-  margin-left:600px;
-  margin-right:auto;
-}
 #caption {
   float:inline;
   text-align:center;
   font-size:20px;
+}
+img.image {
+  width: 300px;
+  height: 300px;
+  vertical-align: middle ;
+  
+}
+div.image_holder {
+  margin-left:auto;
+  margin-right:auto;
+  text-align:center;
+  margin-top:10px ;
 }
 ul.nav-bar{
   margin:30px;
