--- a/mystyle.css
+++ b/mystyle.css
@@ -1,60 +1,147 @@
-#description {
-  float:inline;
-  font-size: 30px;
+@media(max-height:300px) {
+  #title {
+    color:green;
+  }
+}
+#title {
+ color:black;
+ text-align:center;
+ margin:auto;
+}
+#introduction {
+  display:flex;
+  flex-direction:column;
+  background:#FFA07A;
+  justify-items:center;
+  align-items:center;
+  height:100vh;
+  width:100vw;
+}
+#intro-text {
+  color:black;
+  width:80%;
+  font-weight: bold;
+  font-size: 150%;
+  text-indent:5%;
+}
+#barrier {
+  width:100vw;
+  height:30vh;
+  background-color: black;
+}
+#barrier-text-container {
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  width:100%;
+  height:100%;
+}
+#barrier-text {
+  color:white;
+  font-weight:bold;
+  font-size: 300%;
   text-align:center;
+}
+#profile-pic {
+  max-height:50%;
+  max-width:20%;
+  margin:4%;
+}
+#welcome-section {
+ display:flex;
+ height:100vh;
+ padding:0;
+ background-color:pink;
+ justify-content:center;
+ width:100vw;
 }
 
-#caption {
-  float:inline;
-  text-align:center;
-  font-size:20px;
+#projects-holder {
+  width: 100vw;
+  background-color: #FFA07A;
+  height: 60vh;
 }
-img.image {
-  width: 300px;
-  height: 300px;
-  vertical-align: middle;
-  
-}
-div.image_holder {
-  margin-left:auto;
-  margin-right:auto;
-  text-align:center;
-  margin-top:10px;
-}
-ul.nav-bar{
-  margin:30px;
-  padding:20px;
-  overflow:hidden;
-  background-color: #ff99ff;
-  border-style:groove;
-  border-color:black;
 
+#projects {
+ width: 100%;
+ height:100%;
+ margin-left:auto;
+ margin-right:auto;
+ display:grid;
+ grid-template-columns: 20% 20% 20%;
+ grid-template-rows: auto;
+ row-gap: 5%;
+ column-gap: 5%;
+ background-color:#FFA07A;
+ justify-content:space-around;
+ align-content: space-around;
 }
-li.nav-bar{
-  margin-right: 100px;
-  display: inline;
-  color: #ffffff;
-  font-size: 40px;
+.project-tile {
+ display:flex;
+ flex-direction:column;
+ font-weight:bold;
+ color:red;
+ background-color: black;
+ width:  20vw;
+ height: 80%;
+ justify-content:center;
+}
+.bot {
+ text-align:center;
+ background-color:black;
+}
+.project-image {
+ align-self: flex-end;
+ margin:auto;
+ height:100%;
+ width:100%;
+}
+#navbar {
+ position:fixed;
+ background-color:black;
+ top:0;
+ left:0;
+ width:100vw;
+ height:10%;
+}
+#navigation {
+ list-style-type: none;
+ margin: 0;
+ padding: 0;
+ overflow: hidden;
+ margin-left:10%;
+}
+.nav-ele {
+  color: white;
+  display: block;
   text-align: center;
+  padding: 20px;
+  text-decoration: none;
 }
-p.biography{
-  text-align: left;
-  font-size:14px;
+.nav-ele:hover {
+  background-color:gray;
 }
-div.biography{
-  float:inline;
-  margin-right:500px;
-  margin-left:500px;
-
-  padding:10px;
-  background-color: #ff99ff;
-  border:solid;
+.list-ele{
+  float:left;
 }
-body {
-  background-color: #ff9999;
+#center {
+  margin-top:auto;
+  margin-bottom:auto;
 }
-h1 {
-  font-family: Times New Roman, Times,sans-serif;
-  font-size:100px;
-  text-align:center;
+#end {
+ display:flex;
+ color:black;
+ height:20vh;
+ font-style:bold;
+ margin:auto;
+ background-color:pink;
+ width:100vw;
+}
+#profile-link {
+ justify-content:center;
+ margin:auto;
+}
+#github-logo {
+  max-width: 30%;
+  max-height:30%;
 }
