--- a/mystyle.css
+++ b/mystyle.css
@@ -3,6 +3,16 @@
     color:green;
   }
 }
+body {
+  margin:0;
+  padding:0;
+}
+#root-container {
+  background:#FFA07A;
+  display:flex;
+  flex-direction: column;
+  justify-content: left;
+}
 #title {
  color:black;
  text-align:center;
@@ -15,13 +25,14 @@
   justify-items:center;
   align-items:center;
   height:100vh;
-  width:100vw;
+  width:100%;
+  float:left;
 }
 #intro-text {
   color:black;
   width:80%;
   font-weight: bold;
-  font-size: 150%;
+  font-size: large;
   text-indent:5%;
 }
 #barrier {
@@ -36,7 +47,7 @@
   width:100%;
   height:100%;
 }
-#barrier-text {
+.barrier-text {
   color:white;
   font-weight:bold;
   font-size: 300%;
@@ -59,7 +70,7 @@
 #projects-holder {
   width: 100vw;
   background-color: #FFA07A;
-  height: 60vh;
+  height: 100vh;
 }
 
 #projects {
@@ -80,21 +91,30 @@
  display:flex;
  flex-direction:column;
  font-weight:bold;
- color:red;
- background-color: black;
- width:  20vw;
- height: 80%;
- justify-content:center;
+ flex-basis: auto;
+ color:black;
+ background-color: rgb(153, 153, 153);
+ width:  100%;
+ height: 100%;
+ align-items:center;
+ justify-items: flex-end;
+ justify-content: end;
+}
+#lol {
+  margin:10%;
+
 }
 .bot {
+ align-self: center;
  text-align:center;
- background-color:black;
+ border-style: groove;
+ border-radius: 1%;
 }
 .project-image {
- align-self: flex-end;
+  display:block;
+ max-height:100%;
+ max-width:100%;
  margin:auto;
- height:100%;
- width:100%;
 }
 #navbar {
  position:fixed;
