--- a/mystyle.css
+++ b/mystyle.css
@@ -27,6 +27,8 @@ body {
   align-items:center;
   height:80vh;
   width:100vw;
+  padding-bottom: 5%;
+  font-family: Arial;
 }
 #intro-text {
   color:black;
